--- a/backend/package.json
+++ b/backend/package.json
@@ -25,3 +25,11 @@
     "nodemon": "^3.1.9"
   }
 }
+
+"scripts": {
+  "start": "node server/server.js",
+  "server": "nodemon server/server.js",
+  "client": "npm start --prefix client",
+  "build": "npm run build --prefix client",
+  "heroku-postbuild": "npm run build"
+}
